Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -1,137 +1,75 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Motoboy da Sorte</title>
-  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <title>🍀 Motoboy da Sorte 🛵</title>
   <style>
     body {
-      margin: 0;
-      font-family: 'Roboto', sans-serif;
-      background: linear-gradient(to bottom, #111, #222);
-      color: white;
-    }
-
-    header {
-      background-color: #e60000;
-      padding: 20px;
+      background-color: #111;
+      color: #fff;
+      font-family: 'Segoe UI', sans-serif;
       text-align: center;
+      padding: 30px;
     }
 
     header h1 {
-      font-family: 'Bebas Neue', sans-serif;
-      font-size: 48px;
-      margin: 0;
-      letter-spacing: 2px;
+      font-size: 2.5em;
+      color: #ffdf00;
+      text-shadow: 2px 2px 5px #000;
+      margin-bottom: 10px;
     }
 
-    .container {
-      max-width: 800px;
-      margin: 40px auto;
-      padding: 20px;
-      background-color: #1a1a1a;
-      border-radius: 12px;
-      box-shadow: 0 0 20px rgba(255, 0, 0, 0.3);
-    }
-
-    .intro {
-      text-align: center;
-    }
-
-    .intro h2 {
-      font-size: 32px;
-      color: #ffd700;
-    }
-
-    .intro p {
-      font-size: 18px;
+    .promo {
+      font-size: 1.2em;
       margin-top: 10px;
+      color: #ccc;
     }
 
-    .oferta {
-      background-color: #333;
-      padding: 20px;
-      margin-top: 30px;
-      border-left: 5px solid #ffd700;
-      border-radius: 8px;
-    }
-
-    .oferta h3 {
-      margin-top: 0;
-      color: #ff4444;
-    }
-
-    .qr-code {
-      text-align: center;
+    .premio {
       margin: 30px 0;
+      font-size: 1.4em;
+      color: #00ff88;
     }
 
-    .qr-code img {
-      width: 150px;
+    .pizza-img {
+      max-width: 90%;
+      border-radius: 14px;
+      box-shadow: 0 0 20px rgba(255,255,255,0.2);
     }
 
-    .cta {
-      text-align: center;
+    .qr-section {
       margin-top: 40px;
     }
 
-    .cta a {
-      background-color: #ffd700;
-      color: black;
-      padding: 15px 30px;
-      font-weight: bold;
-      border-radius: 8px;
-      text-decoration: none;
-      font-size: 20px;
-      transition: 0.3s;
-    }
-
-    .cta a:hover {
-      background-color: #fff200;
-    }
-
-    footer {
-      text-align: center;
-      padding: 20px;
-      background-color: #111;
-      font-size: 14px;
+    .qr-section p {
       color: #aaa;
+      margin-bottom: 10px;
+    }
+
+    .qr-section img {
+      width: 160px;
+      border-radius: 12px;
+      border: 3px solid #fff;
     }
   </style>
 </head>
 <body>
-
   <header>
-    <h1>MOTOBOY DA SORTE</h1>
+    <h1>🍀 MOTOBOY DA SORTE 🛵</h1>
+    <p class="promo">Concorra todos os dias a prêmios incríveis por apenas <strong>R$2,50</strong>!</p>
   </header>
 
-  <div class="container">
-    <div class="intro">
-      <h2>🎉 Novo projeto de sorteio chegou em Mogi das Cruzes!</h2>
-      <p>Participe com apenas <strong>R$2,50</strong> e concorra todos os dias a prêmios reais!</p>
-      <p><strong>Prêmio de hoje:</strong> 🍕 Pizza tamanho família + Refrigerante</p>
-    </div>
-
-    <div class="oferta">
-      <h3>🔥 Oferta Especial:</h3>
-      <p>Pague apenas <strong>R$7,00</strong> e participe de <strong>7 dias consecutivos</strong> com chances em dobro!</p>
-    </div>
-
-    <div class="qr-code">
-      <p>Siga no Instagram para acompanhar os sorteios:</p>
-      <img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=https://www.instagram.com/motoboy_da_sorte/" alt="QR Code Instagram">
-    </div>
-
-    <div class="cta">
-      <a href="https://www.instagram.com/motoboy_da_sorte/" target="_blank">GARANTIR MINHA VAGA!</a>
-    </div>
+  <div class="premio">
+    <p><strong>Prêmio de hoje:</strong> 🍕 Pizza tamanho família + Refrigerante</p>
+    <img src="https://i.imgur.com/YcYRSnp.jpg" alt="Pizza e Refrigerante" class="pizza-img">
   </div>
 
-  <footer>
-    📍 Mogi das Cruzes – Contato: (11) 91330-4443 / (11) 99910-4178 <br>
-    Instagram: <a href="https://www.instagram.com/motoboy_da_sorte/" target="_blank" style="color: #ffd700;">@motoboy_da_sorte</a>
-  </footer>
-
+  <div class="qr-section">
+    <p>Siga no Instagram e fique por dentro:</p>
+    <a href="https://www.instagram.com/motoboy_da_sorte" target="_blank">
+      <img src="https://api.qrserver.com/v1/create-qr-code/?size=160x160&data=https://www.instagram.com/motoboy_da_sorte" alt="QR Code Instagram">
+    </a>
+  </div>
 </body>
 </html>
