--- a/index.html
+++ b/index.html
@@ -23,6 +23,17 @@
     font-size: 1.5rem;
     color: #ff0;
   }
+  .resumo {
+    background: #ffeb3b;
+    color: #000;
+    padding: 15px;
+    font-size: 1.1rem;
+    font-weight: bold;
+    line-height: 1.5;
+  }
+  .resumo strong {
+    color: #e60000;
+  }
   .premio-dia {
     padding: 20px;
     background: #222;
@@ -98,6 +109,12 @@
   🍀 Motoboy da Sorte 🛵 <br><span>Prêmios todos os dias!</span>
 </header>
 
+<div class="resumo">
+  🎯 <strong>Já pensou ganhar o prêmio de hoje por apenas R$ 2,50?</strong><br>
+  Ou garantir <strong>7 dias de sorte</strong> por apenas <strong>R$ 6,99</strong> e ter <strong>chances em dobro</strong> para concorrer a <strong>delícias diferentes todo dia</strong>? 🍔🍕🍫<br>
+  Participe agora e aproveite essa oportunidade deliciosa!
+</div>
+
 <div class="premio-dia">
   <h2>🎁 Prêmio de Hoje: 🍕 Pizza Família + Refrigerante</h2>
   <img src="https://images.unsplash.com/photo-1594007654729-407eedc4be65?auto=format&fit=crop&w=1200&q=80" alt="Pizza e Refrigerante">
@@ -114,31 +131,38 @@
   
   <div class="dia">
     <strong>Segunda:</strong> 🍔 Combo de Lanche
-    
+    <img src="https://images.unsplash.com/photo-1603052875305-5f7b50b52e12?auto=format&fit=crop&w=800&q=80" alt="Combo de Lanche">
+  </div>
   
   <div class="dia">
     <strong>Terça:</strong> 🍫 Barca de Açaí
-    <
+    <img src="https://images.unsplash.com/photo-1578985545062-69928b1d9587?auto=format&fit=crop&w=800&q=80" alt="Barca de Açaí">
+  </div>
   
   <div class="dia">
     <strong>Quarta:</strong> 🍣 Combo Temaki
-    <
+    <img src="https://images.unsplash.com/photo-1604908177350-3407e51c9abf?auto=format&fit=crop&w=800&q=80" alt="Combo Temaki">
+  </div>
   
   <div class="dia">
     <strong>Quinta:</strong> 🍕 Pizza Família + Refrigerante
-    <
+    <img src="https://images.unsplash.com/photo-1594007654729-407eedc4be65?auto=format&fit=crop&w=1200&q=80" alt="Pizza e Refrigerante">
+  </div>
   
   <div class="dia">
     <strong>Sexta:</strong> 🍔 + 🍟 Combo Especial
-    <
+    <img src="https://images.unsplash.com/photo-1603052875305-5f7b50b52e12?auto=format&fit=crop&w=800&q=80" alt="Combo Especial">
+  </div>
   
   <div class="dia">
     <strong>Sábado:</strong> 🍦 Taça Gigante de Sorvete
-    <
+    <img src="https://images.unsplash.com/photo-1542444459-db0c3a32e5f5?auto=format&fit=crop&w=800&q=80" alt="Sorvete">
+  </div>
   
   <div class="dia">
     <strong>Domingo:</strong> 💵 PIX de R$ 50
-    
+    <img src="https://images.unsplash.com/photo-1611432579699-4845e4a0e3f1?auto=format&fit=crop&w=800&q=80" alt="Pix">
+  </div>
 </div>
 
 <div class="ganhadores">
@@ -176,4 +200,3 @@ atualizarContador();
 
 </body>
 </html>
-
